Added debug fields

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <script src="js/Main.js"></script>
 <script src="js/GamepadSupport.js"></script>
+<script src="js/GraphicsCommon.js"></script>
 
 </body>
 </html>
