--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <canvas id="gameCanvas" width="1200" height="800"></canvas>
 
 <script src="js/Main.js"></script>
+<script src="js/DebugConsole.js"></script>
 <script src="js/GamepadSupport.js"></script>
 <script src="js/GraphicsCommon.js"></script>
 
